# db-mcp-server

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
src/db/: database_pool.rs  executor.rs  macros.rs  mod.rs  params.rs  pool.rs  schema.rs  transaction_registry.rs  types.rs
src/mcp/: mod.rs  service.rs
src/models/: connection.rs  mod.rs  query.rs  schema.rs
src/tools/: explain.rs  format.rs  guard.rs  mod.rs  query.rs  schema.rs  sql_validator.rs  transaction.rs  write.rs
src/transport/: http.rs  mod.rs  stdio.rs
tests/: dangerous_guard_test.rs  explain_test.rs  fuzz_test.rs  fuzz_with_db_test.rs  list_transactions_test.rs  query_validation_test.rs  sqlite_writable_test.rs  sqlite_write_minimal_test.rs  transaction_test.rs  utf8_test.rs
