[package]
name = "db-mcp-server"
version = "0.1.0"
edition = "2024"
description = "MCP server for database operations - enables AI assistants to query SQL databases"
license = "MIT"
repository = "https://github.com/example/db-mcp-server"
keywords = ["mcp", "database", "sqlite", "postgresql", "mysql"]
categories = ["database", "command-line-utilities"]

[dependencies]
rmcp = { version = "0.12.0", features = [
    "transport-io",
    "transport-streamable-http-server",
] }
axum = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    "any",
    "json",
    "chrono",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
    "net",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
humansize = "2"
schemars = { version = "1.0", features = ["derive"] }
futures-util = "0.3.31"
unicode-width = "0.2.2"
sqlparser = "0.60"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
rand = "0.8"

[[bin]]
name = "db-mcp-server"
path = "src/main.rs"

[lib]
name = "db_mcp_server"
path = "src/lib.rs"
